--- a/monografia.tex
+++ b/monografia.tex
@@ -3,11 +3,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Opções:
-%  - Graduação: bacharelado|engenharia|licenciatura
-%  - Pós-graduação: [qualificacao], mestrado|doutorado, ppca|ppginf
+%  - Graduação: eletrica|redes|mecatronica|computacao
+%  - Pós-graduação: [qualificacao], mestrado|doutorado, ppgee|pgea|ppee
 
-% \documentclass[engenharia]{UnB-CIC}%
-\documentclass[qualificacao,mestrado,ppca]{UnB-CIC}%
+% \documentclass[engenharia]{UnB-EnE}%
+\documentclass[qualificacao,doutorado,ppgee]{UnB-EnE}%
 
 \usepackage{pdfpages}% incluir PDFs, usado no apêndice
 
@@ -15,7 +15,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\orientador{\prof \dr Guilherme Novaes Ramos}{CIC/UnB}%
+\orientador{\prof \dr Hugo Dias}{PPGEE/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
 \coordenador[a]{\prof[a] \dr[a] Ada Lovelace}{Bibliothèque universelle de Genève}%
 \diamesano{24}{dezembro}{2014}%
@@ -23,21 +23,21 @@
 \membrobanca{\prof \dr Donald Knuth}{Stanford University}%
 \membrobanca{\dr Leslie Lamport}{Microsoft Research}%
 
-\autor{Guilherme N.}{Ramos}%
+\autor{Stefano M. P. C.}{Souza}%
 
-\titulo{UnB-CIC: Uma classe em LaTeX para textos do Departamento de Ciência da Computação}%
+\titulo{UnB-EnE: Uma classe em LaTeX para textos do Departamento de Engenharia Elétrica}%
 
 \palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
 \keywords{LaTeX, scientific method, thesis}%
 
-\newcommand{\unbcic}{\texttt{UnB-CIC}}%
+\newcommand{\unbene}{\texttt{UnB-EnE}}%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Texto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
     \capitulo{1_Introducao}{Introdução}%
-    \capitulo{2_UnB-CIC}{A Classe \unbcic}%
+    \capitulo{2_UnB-Ene}{A Classe \unbene}%
     \capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
     \capitulo{4_Apresentacao}{Apresentações}%
 
