correção no nome do arquivo do Cap. 2

--- a/monografia.tex
+++ b/monografia.tex
@@ -16,7 +16,7 @@
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \orientador{\prof \dr Hugo Dias}{PPGEE/UnB}%
-%\coorientador{\prof \dr José Ralha}{CIC/UnB}
+%\coorientador{\prof \dr Albert Einstein}{Hebrew Univerty of Jerusalem}
 \coordenador[a]{\prof[a] \dr[a] Ada Lovelace}{Bibliothèque universelle de Genève}%
 \diamesano{24}{dezembro}{2014}%
 
@@ -37,7 +37,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
     \capitulo{1_Introducao}{Introdução}%
-    \capitulo{2_UnB-Ene}{A Classe \unbene}%
+    \capitulo{2_UnB-EnE}{A Classe \unbene}%
     \capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
     \capitulo{4_Apresentacao}{Apresentações}%
 
