simplificando as dependências da classe

--- a/monografia.tex
+++ b/monografia.tex
@@ -15,13 +15,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\orientador{\prof \dr Hugo Dias}{PPGEE/UnB}%
-%\coorientador{\prof \dr Albert Einstein}{Hebrew Univerty of Jerusalem}
-\coordenador[a]{\prof[a] \dr[a] Ada Lovelace}{Bibliothèque universelle de Genève}%
-\diamesano{24}{dezembro}{2014}%
+\orientador{\prof \dr Adi Shamir}{Weizmann Institute}%
+\coorientador{\prof \dr Ivan Damg\aard}{Aarhus University}
+\coordenador[a]{\prof[a] \dr[a] Alexandra Boldyreva}{Georgia Tech}%
+\diamesano{13}{março}{2019}%
 
-\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
-\membrobanca{\dr Leslie Lamport}{Microsoft Research}%
+\membrobanca{\prof \dr Yehuda Lindell}{Bar Ilan University}%
+\membrobanca{\dr Silvio Micali}{Massachusetts Institute of Technology}%
 
 \autor{Stefano M. P. C.}{Souza}%
 
@@ -36,11 +36,11 @@
 % Texto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
-    \capitulo{1_Introducao}{Introdução}%
-    \capitulo{2_UnB-EnE}{A Classe \unbene}%
-    \capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
-    \capitulo{4_Apresentacao}{Apresentações}%
-
-    \apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
-    \anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
+	\capitulo{exemplos/tex/1_Introducao}{Introdução}%
+	\capitulo{exemplos/tex/2_UnB-EnE}{A Classe \unbene}%
+	\capitulo{exemplos/tex/3_TCC}{Trabalho de Conclusão de Curso}%
+	\capitulo{exemplos/tex/4_Apresentacao}{Apresentações}%
+	
+	\apendice{exemplos/anexos/Apendice_Fichamento}{Fichamento de Artigo Científico}%
+\anexo{exemplos/anexos/Anexo1}{Documentação Original \unbcic\ (parcial)}%
 \end{document}%
