--- a/exemplos/tex/siglas.tex
+++ b/exemplos/tex/siglas.tex
@@ -1,7 +1,7 @@
 % Não é necessário ordenar as siglas
 \sigla{UnB}{Universidade de Brasília}%
 \sigla{BCE}{Biblioteca Central}%
-\sigla{CIC}{Departamento de Ciência da Computação}%
+\sigla{EnE}{Departamento de Engenharia Elétrica}%
 \sigla{CTAN}{Comprehensive \TeX\ Archive Network}%
 \sigla{CEP}{Comissão de Ética Pública}%
 \sigla{CAPES}{Coordenação de Aperfeiçoamento de Pessoal de Nível Superior}%
