--- a/exemplos/tex/2_UnB-EnE.tex
+++ b/exemplos/tex/2_UnB-EnE.tex
@@ -199,7 +199,7 @@ Considerando \refCap{1_Introducao} e também o \refCap{2_UnB-EnE}, é possível 
 \refCaps{1_Introducao}{2_UnB-EnE}%
 \end{verbatim}
 
-Estes comandos visam garantir um padrão uniforme para referenciamento dos capítulos], mas nada
+Estes comandos visam garantir um padrão uniforme para referenciamento dos capítulos, mas nada
 impede o uso dos comandos padrão do \LaTeX\.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -283,8 +283,8 @@ referência a elas com um padrão uniforme, e nada impede o uso dos comandos pad
 
 \figura{img/positivo_cor}{Outra marca colorida}{unb2}{width=0.25\textwidth}%
 
-Note que o diretório \texttt{./img}, bem como os arquivos \texttt{./img/positivo_cor.pdf} e 
-\texttt{./img/contorno_preto.pdf} são requeridos pela classe para a geração da capa e das folhas
+Note que o diretório {./img}, bem como os arquivos ./img/positivo_cor.pdf e 
+./img/contorno_preto.pdf são requeridos pela classe para a geração da capa e das folhas
 de rosto.
 
 
