--- a/exemplos/tex/1_Introducao.tex
+++ b/exemplos/tex/1_Introducao.tex
@@ -1,51 +1,49 @@
-Este documento serve de exemplo da utilização da classe \unbcic\ para escrever
-um texto cujo objetivo é apresentar os resultados de um trabalho científico. A
-sequência de ideias apresentada deve fluir claramente, de modo que o leitor
-consiga compreender os principais conceitos e resultados apresentados, bem como
-encontrar informações sobre conceitos secundários.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 1_Introducao : Introdução
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Este documento serve de exemplo da utilização da classe \unbene\ para escrever um texto cujo 
+objetivo é apresentar os resultados de um trabalho de pesquisa científica. A sequência de ideias 
+apresentada deve fluir claramente, de modo que o leitor consiga compreender os principais conceitos 
+e resultados apresentados, bem como encontrar informações sobre conceitos secundários.
 
-%\url{http://www.escritacientifica.com/}
+Existem vários materiais que podem ajudar o aluno a desenvolver sua escrita ciêntífica: desde
+materiais gratuítos, como ?, até cursos pagos, como \url{http://www.escritacientifica.com/}.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Trabalho de Conclusão de Curso}%
-Todos os cursos do \acrfull{CIC} da \acrfull{UnB} exigem a produção de um
-texto científico como requisito para formação. %(veja \refAnexo{NormasGerais} para mais detalhes)
+Todos os cursos do \acrfull{EnE} da \acrfull{UnB} exigem a produção de um texto científico como 
+requisito para formação. Busque as normas referentes a cada curso/programa no site do Departamento
+\url{http://www.ene.unb.br}.
+
 As etapas desta monografia/dissertação/tese devem seguir o \emph{método científico}.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Metodologia Científica}%
-Ciência (do Latim \emph{scientia}, traduzido como ``conhecimento'') é uma forma
-sistemática de produzir conhecimento (via método científico), ou o nome dado a
-estrutura organizada do conhecimento obtido.
+Ciência (do Latim \emph{scientia}, traduzido como ``conhecimento'') é uma forma sistemática de 
+produzir conhecimento (via método científico), ou o nome dado a estrutura organizada do conhecimento 
+obtido.
 
-O método científico é um conjunto de regras básicas de como proceder para produzir
-conhecimento, criando algo novo ou corrigindo/incrementando conhecimentos
-pré-existentes. Consiste em juntar evidências empíricas verificáveis baseadas na
-observação sistemática e controlada, geralmente resultantes de experiências ou
-pesquisa de campo, e analisá-las logicamente.
+O método científico é um conjunto de regras básicas de como proceder para produzir conhecimento, 
+criando algo novo ou corrigindo/incrementando conhecimentos pré-existentes. Consiste em juntar 
+evidências empíricas verificáveis baseadas na observação sistemática e controlada, geralmente 
+resultantes de experiências ou pesquisa de campo, e analisá-las logicamente.
 
-Esta ideia foi formalizada por Newton em sua obra \emph{Philosophiae Naturalis
-Principia Mathematica}~\cite{newton1833philosophiae} da seguinte forma:
+Esta ideia foi formalizada por Newton em sua obra \emph{Philosophiae Naturalis Principia 
+Mathematica}~\cite{newton1833philosophiae} da seguinte forma:
 \begin{enumerate}
-	\item Não se deve admitir causas das coisas naturais além daquelas
-	que sejam verdadeiras e sejam suficientes para explicar seus fenômenos.
+	\item Não se deve admitir causas das coisas naturais além daquelas que sejam verdadeiras e 
+	sejam suficientes para explicar seus fenômenos.
 	\item Efeitos naturais do mesmo gênero devem ser atribuídos as mesmas causas.
 	\item Características de corpos são consideradas universais.
-	\item Proposições deduzidas da observação de fenômenos são
-	consideradas corretas até que outro fenômeno mostre o contrário.
+	\item Proposições deduzidas da observação de fenômenos são consideradas corretas até que outro 
+	fenômeno mostre o contrário.
 \end{enumerate}%
 
 Uma abordagem para esta metodologia é seguir os seguintes passos:
 \begin{description}
-	\item[Caracterização do Problema:] Qual a pergunta a ser respondida? Quais
-informações/recursos necessários na investigação?
+	\item[Caracterização do Problema:] Qual a pergunta a ser respondida? Quais informações/recursos 
+	necessários na investigação?
 	\item[Formulação da Hípotese:] Quais explicações possíveis para o que foi observado?
-	\item[Previsão:] Dadas explicações [corretas] para as observações, quais os
-	resultados previstos?
+	\item[Previsão:] Dadas explicações [corretas] para as observações, quais os resultados 
+	previstos?
 	\item[Experimentos:] \ \\\vspace{-2em}
 		\begin{enumerate}
 			\item Execute testes [reproduzíveis] da hipótese, coletando dados.
@@ -57,12 +55,11 @@ informações/recursos necessários na investigação?
 				\end{itemize}
 		\end{enumerate}
 	\item[Documentação:] Registre e divulgue os resultados.
-	\item[Revisão de Resultados:] Validação dos resultados por outras pessoas
-	[capacitadas].
+	\item[Revisão de Resultados:] Validação dos resultados por outras pessoas [capacitadas].
 \end{description}%
 
-Geralmente se começa com a revisão sistemática, uma metodologia de pesquisa
-específica para juntar e avaliar material relevante a determinado tópico~\cite{Biolchini_2005_Systematicreviewin}.
+Geralmente se começa com a revisão sistemática, uma metodologia de pesquisa específica para juntar 
+e avaliar material relevante a determinado tópico~\cite{Biolchini_2005_Systematicreviewin}.
 
 \subsection{Veja Também}
 \begin{itemize}
@@ -70,24 +67,22 @@ específica para juntar e avaliar material relevante a determinado tópico~\cite
 		\\\url{http://scholar.google.com.br/}%
 	\item ACM Digital Library
 		\\\url{http://dl.acm.org/}%
-	\item Portal \acrshort{CAPES}
-		\\\url{http://www.periodicos.capes.gov.br/}%
 	\item IEEE Xplore
 		\\\url{http://ieeexplore.ieee.org/Xplore/home.jsp}%
+	\item ArXiv.org
+		\\\url{https://arxiv.org/}%
 	\item ScienceDirect
 		\\\url{http://www.sciencedirect.com/}%
 	\item Springer Link
 		\\\url{http://link.springer.com/}%
+	\item Portal \acrshort{CAPES}
+		\\\url{http://www.periodicos.capes.gov.br/}%
 \end{itemize}
 
-Para buscar referências, \emph{The DBLP Computer Science Bibliography}\footnote{\url{http://dblp.uni-trier.de/}}
-é um ótimo recurso. Veja o \refApendice{Apendice_Fichamento} para instruções
-sobre como organizar as informações de artigos científicos.
+Para buscar referências, \emph{The DBLP Computer Science Bibliography}\footnote{
+\url{http://dblp.uni-trier.de/}} é um ótimo recurso. Veja o \refApendice{Apendice_Fichamento} 
+para instruções sobre como organizar as informações de artigos científicos.
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\LaTeX}%
 
 \TeX\ é ``\emph{a typesetting system intended for the creation of beautiful books
@@ -101,12 +96,12 @@ inúmeras possibilidades. Este sistema tipográfico visa explorar as potencialid
 da impressão digital, sem que o resultado seja alterado em função de diferenças
 entre plataformas/sistemas.
 
-Em uma publicação, um \emph{autor} entrega o texto a uma editor que define a
-formatação do documento (tamanho da fonte, largura de colunas, espaçamento, etc.)
-e passa as instruções (e o manuscrito) ao tipógrafo, que as executa. Neste processo,
-\LaTeX\ assume os papéis de editor e tipógrafo, mas por ser ``apenas'' um programa
-de computador, o autor deve prover algumas informações adicionais ~\cite{Oetiker_1995_notsoshort},
-geralmente por meio de marcações (comandos).
+Em uma publicação, um \emph{autor} entrega o texto a uma editor que define a formatação do 
+documento (tamanho da fonte, largura de colunas, espaçamento, etc.) e passa as instruções (e o 
+manuscrito) ao tipógrafo, que as executa. Neste processo, \LaTeX\ assume os papéis de editor e 
+tipógrafo, mas por ser ``apenas'' um programa de computador, o autor deve prover algumas 
+informações adicionais ~\cite{Oetiker_1995_notsoshort}, geralmente por meio de marcações 
+(comandos).
 
 Esta abordagem de linguagem de marcação (em que se indica como o texto deve ser
 formatado) é diferente da abordagem OQVVEOQVO (``o que você vê é o que você
@@ -155,11 +150,6 @@ Enquanto os editores tradicionais são indicados para:
 		\\\url{http://www.writelatex.com}
 \end{itemize}
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Plágio}%
 O JusBrasil\footnote{\url{http://www.jusbrasil.com.br}} define plágio como
 ``reprodução, total ou parcial, da propriedade intelectual de alguém, inculcando-se
@@ -183,10 +173,6 @@ referente ao plágio nas instituições de ensino\footnote{\url{https://www.cape
 		\\\url{http://www.cnpq.br/web/guest/documentos-do-cic}
 \end{itemize}
 
-
-
-%\section{Normas CIC}
-% \href{http://monografias.cic.unb.br/dspace/normasGerais.pdf}{Política de Publicação de Monografias e Dissertações no Repositório Digital do CIC}%
-% \href{http://monografias.cic.unb.br/dspace/}{Repositório do Departamento de Ciência da Computação da UnB}
-
-% \href{http://bdm.bce.unb.br/}{Biblioteca Digital de Monografias de Graduação e Especialização}
+\section{Normas EnE}
+Cada curso/programa do \acrlong{EnE} é regido por um regramento específico. A melhor fonte de 
+informação é o site do departamento.
